@@ -1,8 +1,9 @@
 Begin4
 Title:		hdparm
-Version:	9.5
-Entered-date:	2008-12-09
+Version:	9.6
+Entered-date:	2008-12-17
 Description:	hdparm - get/set hard disk parameters for Linux SATA/IDE drives.
+		v9.6 fix -N for 1.5TB drives
 		v9.5 byteswap ID strings in fwdownload workarounds
 		v9.4 nuked --fwdownload80 in favour of model-specific workarounds
 		v9.3 new --idle-immediate and --idle-unload commands
@@ -79,7 +80,7 @@ Author:		mlord@pobox.com (Mark Lord)
 Maintained-by:	mlord@pobox.com (Mark Lord)
 Primary-site:	http://sourceforge.net/projects/hdparm/
 Alternate-site:	http://www.ibiblio.org/pub/Linux/system/hardware
-		96K hdparm-9.5.tar.gz
+		96K hdparm-9.6.tar.gz
 		4K hdparm.lsm
 Platforms:	Linux, kernels 2.2 through 2.6
 Copying-policy:	BSD License
